# SIH25

./: .env.example  .gitignore  DEMO_QUERIES.md  PHASE3_COMPLETE.md  PHASE3_COMPLETE_WITH_LOGGING.md  QUICK_FIX_APPLIED.md  README.md  STORY5_IMPLEMENTATION_COMPLETE.md  SUPABASE_FIX_COMPLETE.md  pyproject.toml  restart_services.sh  run_mvp.py  setup_mvp.sh  test_integration_fix.py  test_jarvis_mvp.py  test_story5.py  verify_phase3.py  verify_voice_setup.py
.bmad-core/: install-manifest.yaml
DATAOPS/: README.md  step5_data_preprocessor.py  step6_data_exporter_parquet.py
DOCS/: Brainstorm-1.md  DataOps-Pipeline.md
TESTS/: [SOLVED] BUG-1.md
docs/: AGENT_HALLUCINATION_ANALYSIS.md  AGENT_REFACTOR_SUMMARY.md  COMPREHENSIVE_FIX_PLAN.md  PHASE3_READY_TO_TEST.md  PHASE3_VOICE_AI_IMPLEMENTATION.md  PHASE_2_COMPLETION_SUMMARY.md  PIPECAT_IMPORT_FIX.md  QUICK_FIX_SUMMARY.md  SARVAM_TTS_FIX.md  VOICE_AI_LOGGING_GUIDE.md  VOICE_CONNECTION_FIX.md  VOICE_DEBUG_QUICK_REF.md  architecture.md  codebase_review.md  folder_structure.md  frontend_review.md  prd.md  sih2025_abstract_summary.md  sih2025_idea_description.md  sih2025_idea_title.md  sih2025_submission_package.md
docs/Guides/: DATAOPS_PIPELINE_DIAGRAM.md  DATA_PIPELINE_GIST.md  INSTRUCTIONS_PPT.md  JARVIS_INTEGRATION.md  LOADER_SETUP.md  SIH_PRESENTATION_CONTENT.md
docs/PPLX/: PS.txt
docs/stories/: story-1-data-loader.md  story-2-mcp-server.md  story-3-ai-agent.md  story-4-frontend.md  story-5-vector-db.md
output/: 7902250_prof_data.parquet  7902250_prof_processing_log.json  7902250_prof_profiles.parquet  7902250_prof_quality_report.json
sih25/: .env.example  QUICK_START.md  __init__.py  load_sample_data.py  mcp_config.json
sih25/AGENT/: README.md  __init__.py  api.py  conversation_memory.py  float_chat_agent.py  jarvis_ocean_agent.py  main.py  mcp_client.py  ocean_agent.py  scientific_context.py  start_agent.py  test_agent.py
sih25/API/: main.py  models.py  safety.py  validation.py
sih25/API_ENHANCED/: mcp_server.py
sih25/DATAOPS/: SOLUTION_SUMMARY.md  __init__.py  main.py  main_orchestrator.py  process_nc_file.py  step4_data_validator.py  validation_report_D2900765_067.json
sih25/FRONTEND/: app.py  start_frontend.py
sih25/FRONTEND_REACT/: .env.example  INTEGRATION_STATUS.md  index.html  package-lock.json  package.json  test-supabase.js
sih25/LOADER/: data_loader.py  test_integration.py
sih25/VOICE_AI/: .env.example  README.md  __init__.py  agno_voice_handler.py  api.py  config.py  (+10 more)
sih25_vector_db/: chroma.sqlite3
(+110 files in other folders)
